syntax = "proto3";
import "google/protobuf/wrappers.proto";
import "result.proto";  
option csharp_namespace = "DegreeCatalogGrpc";
package DegreeCatalog;

service DegreeCatalogService {
  rpc AddDegreeCatalog(AddDegreeCatalogRequest) returns (CommonResult);
  rpc UpdateDegreeCatalog(UpdateDegreeCatalogRequest) returns (CommonResult);
  rpc DeleteDegreeCatalog(DeleteDegreeCatalogRequest) returns (CommonResult);

}

message AddDegreeCatalogRequest {
  optional google.protobuf.StringValue DegName = 1;
}

message UpdateDegreeCatalogRequest {
  optional google.protobuf.Int32Value Id = 1;
  optional google.protobuf.StringValue DegName = 2;
}
message DeleteDegreeCatalogRequest {
  optional google.protobuf.Int32Value Id = 1;
}

